src/main/cicd/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/innoq-expiration-date/best-before-api'
  name: best-before-api  
  namespace: best-end-api
  labels:
    app: best-before-api
    app.kubernetes.io/component: best-before-api
    app.kubernetes.io/instance: best-before-api
    app.kubernetes.io/name: best-before-api
    app.kubernetes.io/part-of: best-before-api-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: best-before-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: best-before-api
        deploymentconfig: best-before-api
    spec:
      containers:
        - name: best-before-api
          image: >-
            image-registry.openshift-image-registry.svc:5000/best-end-api/best-before-api@sha256:5f3842a144e8130131287c51480140fd8a32d52c372b0011a358cda8704bc059
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false
